--- a/hw2/Makefile
+++ b/hw2/Makefile
@@ -4,7 +4,7 @@ CC=gcc
 # CFLAGS will be the options we'll pass to the compiler
 CFLAGS=-Wall -m32 -g -fno-pic
 
-all: main elf
+all: main elf elf-data
 
 main: main.c
 	$(CC) $(CFLAGS) main.c -o main
@@ -14,6 +14,12 @@ elf: elf.o
 
 elf.o: elf.c
 	$(CC) -c -fno-pic -static -fno-builtin -ggdb -m32 -fno-omit-frame-pointer elf.c 
+
+elf-data: elf-data.o 
+	ld -m elf_i386 -N -e main -Ttext 0 -o elf-data elf-data.o 
+
+elf-data.o: elf-data.c
+	$(CC) -c -fno-pic -static -fno-builtin -ggdb -m32 -fno-omit-frame-pointer elf-data.c 
 
 clean:
 	rm *.o main
