--- a/xv6-public/Makefile
+++ b/xv6-public/Makefile
@@ -185,6 +185,11 @@ UPROGS=\
 	_testsh\
 	_wrprotect\
 	_thread\
+	_thread-spinlock\
+	_thread-mutex\
+	_thread-sem\
+	_thread-perthreadv\
+
 
 fs.img: mkfs README $(UPROGS)
 	./mkfs fs.img README $(UPROGS)
@@ -255,6 +260,7 @@ EXTRA=\
 	mkfs.c ulib.c user.h cat.c echo.c forktest.c grep.c kill.c\
 	ln.c ls.c mkdir.c rm.c stressfs.c usertests.c wc.c zombie.c\
 	printf.c umalloc.c nsh.c testsh.c wrprotect.c thread.c\
+	thread-spinlock.c thread-mutex.c thread-sem.c thread-perthreadv.c\
 	README dot-bochsrc *.pl toc.* runoff runoff1 runoff.list\
 	.gdbinit.tmpl gdbutil\
 
